<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NatCalc</string>
    <string name="app_subtitle">Natural Language Calculator</string>
    <string name="hint_input">Type or speak your calculation…</string>
    <string name="title_history">Calculation History</string>
    <string name="empty_history">No calculations yet.\nTry asking something!</string>
    <string name="btn_clear_history">Clear History</string>
    <string name="voice_prompt">Say your calculation…</string>
    <string name="voice_not_available">Voice input not available on this device</string>
    <string name="action_history">History</string>
    <string name="action_clear">Clear Chat</string>
</resources>
